script analisi istruzione aggiornato

--- a/Scripts/analisi_istruzione_nopesi.ipynb
+++ b/Scripts/analisi_istruzione_nopesi.ipynb
@@ -126,120 +126,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "53d4250f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carichiamo Graph Ciclabili\n",
-    "with open(PATH_RETE_CICLABILE_COMPLETA_PICKLE_CLEAN, \"rb\") as f:\n",
-    "    G_strade_ciclabili = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e0b52830",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_compose = G_strade_ciclabili.copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f31d1e5",
-   "metadata": {},
-   "source": [
-    "Rimuoviamo i pesi delle strade"
+    "gdf_list = [\n",
+    "    {\"gdf\":  gpd.read_file(PATH_BIBLIOTECHE_CLEAN),\n",
+    "     \"tipo\": \"Biblioteche\",\n",
+    "     \"gdf\":  gpd.read_file(PATH_SCUOLE_CLEAN),\n",
+    "     \"tipo\": \"Scuole\"}\n",
+    "     ]\n",
+    "Graph_functions.auto_analysis_poi(gdf_list, custom_weights={\"default\": 1}, PATH_GEOJSON=\"../Data/Clean/Analisi/Istruzione_nopesi.geojson\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f22c39fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for u, v, k in G_compose.edges(keys=True):\n",
-    "    if G_compose[u][v][k][\"tipo\"] == \"Strade_ciclabili\":\n",
-    "        G_compose[u][v][k]['weight'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1f898abd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_biblioteche = gpd.read_file(PATH_BIBLIOTECHE_CLEAN)\n",
-    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_biblioteche,\n",
-    "                                                                     tipo = \"biblioteche\",\n",
-    "                                                                     poi = True,\n",
-    "                                                                     artificial=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1a9ceb59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_scuole = gpd.read_file(PATH_SCUOLE_CLEAN)\n",
-    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_biblioteche,\n",
-    "                                                                     tipo = \"scuole\",\n",
-    "                                                                     poi = True,\n",
-    "                                                                     artificial=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5c6287da",
-   "metadata": {},
-   "source": [
-    "## Utilizziamo algoritmo di **Steiner Tree**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "3c107927",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poi_nodes = [n for n, d in G_compose.nodes(data=True) if d.get(\"poi\") == True]\n",
-    "G_sport_tempo_libero = nx.MultiDiGraph(steiner_tree(G_compose, terminal_nodes=poi_nodes, weight='weight')).to_undirected()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d3c9ef6b",
+   "id": "3f4d95aa",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "<>:5: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "<>:5: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "C:\\Users\\apera\\AppData\\Local\\Temp\\ipykernel_4856\\4181678500.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  with open(\"..\\Data\\Staging\\Analisi\\Istruzione_clean_nopesi.pickle\", \"wb\") as f:\n",
-      "C:\\Users\\apera\\AppData\\Local\\Temp\\ipykernel_4856\\4181678500.py:5: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  gdf_steiner.to_file(\"..\\Data\\Clean\\Analisi\\Istruzione_clean_nopesi.geojson\", driver=\"GeoJSON\")\n"
+      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "  return ogr_read(\n"
      ]
     }
    ],
    "source": [
-    "with open(\"..\\Data\\Staging\\Analisi\\Istruzione_clean_nopesi.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(G_sport_tempo_libero, f)\n",
+    "gdf_analisi_istruzione_nopesi = gpd.read_file(\"../Data/Clean/Analisi/Istruzione_nopesi.geojson\", driver= \"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fe4e6f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminiamo connessioni \"artificiali\" usate per connettere i \"poi\" al grafo delle strade\n",
+    "gdf_analisi_istruzione_nopesi_mod = gdf_analisi_istruzione_nopesi[gdf_analisi_istruzione_nopesi[\"artificial\"] != True]\n",
     "\n",
-    "gdf_steiner = ox.graph_to_gdfs(G_sport_tempo_libero, edges=True, nodes=False)\n",
-    "gdf_steiner.to_file(\"..\\Data\\Clean\\Analisi\\Istruzione_clean_nopesi.geojson\", driver=\"GeoJSON\")"
+    "# Leggi i due POI\n",
+    "gdf_scuole = gpd.read_file(PATH_SCUOLE_CLEAN)\n",
+    "gdf_biblioteche = gpd.read_file(PATH_BIBLIOTECHE_CLEAN)\n",
+    "\n",
+    "# Unisci in un'unica geometria\n",
+    "geometry_poi = gpd.GeoSeries(\n",
+    "    gpd.pd.concat([gdf_scuole.geometry, gdf_biblioteche.geometry], ignore_index=True)\n",
+    ").union_all()\n",
+    "\n",
+    "# Filtra il GDF di partenza\n",
+    "gdf_senza_poi = []\n",
+    "for idx, row in gdf_analisi_istruzione_nopesi_mod.iterrows():\n",
+    "    if not geometry_poi.contains(row.geometry):\n",
+    "        gdf_senza_poi.append(row)\n",
+    "\n",
+    "# Crea nuovo GeoDataFrame\n",
+    "gdf_analisi_istruzione_nopesi_mod = gpd.GeoDataFrame(gdf_senza_poi, crs=CRS_GRAD)\n",
+    "\n",
+    "# Salviamo per test di visualizzazione su kepler\n",
+    "gdf_analisi_istruzione_nopesi_mod.to_file(\"../Data/Clean/Analisi/istruzione_nopesi_senza_poi.geojson\", driver=\"GeoJSON\")\n",
+    "\n",
+    "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
+    "gdf_analisi_istruzione_nopesi_mod_most_highways = gdf_analisi_istruzione_nopesi_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"length\": lambda x: sum(x/1000)\n",
+    "    }).sort_values(by=\"length\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "24ffaec5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              length\n",
+      "highway                             \n",
+      "footway                   121.765413\n",
+      "residential                42.096350\n",
+      "unclassified               23.689185\n",
+      "tertiary                   19.014940\n",
+      "service                     9.596027\n",
+      "secondary                   8.968093\n",
+      "cycleway                    6.613318\n",
+      "primary                     3.950768\n",
+      "pedestrian                  3.414012\n",
+      "track                       2.148947\n",
+      "motorway                    1.380705\n",
+      "motorway_link               1.333613\n",
+      "footway steps               1.080161\n",
+      "footway service             0.975948\n",
+      "construction                0.656266\n",
+      "residential footway         0.483355\n",
+      "path                        0.427215\n",
+      "residential service         0.330508\n",
+      "residential pedestrian      0.268137\n",
+      "unclassified path           0.240288\n",
+      "footway pedestrian          0.232494\n",
+      "unclassified residential    0.220694\n",
+      "track service path          0.217139\n",
+      "tertiary_link               0.205061\n",
+      "residential cycleway        0.162053\n",
+      "trunk_link                  0.138373\n",
+      "steps                       0.138340\n",
+      "unclassified footway        0.138188\n",
+      "unclassified track          0.124803\n",
+      "unclassified tertiary       0.107652\n",
+      "living_street               0.086991\n",
+      "track service               0.084233\n",
+      "secondary_link              0.082445\n",
+      "primary_link                0.067560\n",
+      "footway platform            0.063848\n",
+      "service path                0.063841\n",
+      "footway path                0.055518\n",
+      "service pedestrian          0.043467\n",
+      "tertiary tertiary_link      0.037768\n",
+      "Tot: 250.70371968731462\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Stampiamo il risultato\n",
+    "print(gdf_analisi_istruzione_nopesi_mod_most_highways)\n",
+    "print(f\"Tot: {gdf_analisi_istruzione_nopesi_mod_most_highways[\"length\"].sum()}\")"
    ]
   }
  ],
