script analisi con tipo(parchi, impianti, aree gioco) corretto

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c774a8e6",
    "metadata": {},
    "outputs": [],
@@ -99,9 +99,9 @@
     "    {\"gdf\":  gpd.read_file(PATH_PARCHI_CLEAN),\n",
     "     \"tipo\": \"parchi\",\n",
     "     \"gdf\":  gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN),\n",
-    "     \"tipo\": \"parchi\",\n",
+    "     \"tipo\": \"Impianti sportivi\",\n",
     "     \"gdf\":  gpd.read_file(PATH_AREE_GIOCO_CLEAN),\n",
-    "     \"tipo\": \"parchi\",}\n",
+    "     \"tipo\": \"Aree gioco\",}\n",
     "]\n",
     "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
    ]
