script analisi cultura e spettacolo aggiornato sia con pesi che senza

--- a/Scripts/analisi_cultura_spettacolo_nopesi.ipynb
+++ b/Scripts/analisi_cultura_spettacolo_nopesi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b9d327b4",
    "metadata": {},
    "outputs": [],
@@ -44,170 +44,121 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "19123083",
-   "metadata": {},
-   "source": [
-    "Carichiamo il Grafo di base della rete stradale/ciclabile"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9f48dc27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carichiamo Graph Ciclabili\n",
-    "with open(PATH_RETE_CICLABILE_COMPLETA_PICKLE_CLEAN, \"rb\") as f:\n",
-    "    G_strade_ciclabili = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "adef3291",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_compose = G_strade_ciclabili.copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a99b9bc",
-   "metadata": {},
-   "source": [
-    "Rimuoviamo i pesi dalle strade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2a8db4c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "for u, v, k in G_compose.edges(keys=True):\n",
-    "    if G_compose[u][v][k][\"tipo\"] == \"Strade_ciclabili\":\n",
-    "        G_compose[u][v][k]['weight'] = 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d89e6d2",
-   "metadata": {},
-   "source": [
-    "### Aggiunta di **musei** come **\"poi\"**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7f996c67",
-   "metadata": {},
-   "source": [
-    "1. Carichiamo il file dei musei da \"clean\"\n",
-    "2. Utilizziamo **\"connect_poi_nodes_to_graph()\"** per connettere il geodataframe come \"poi\" al grafo delle strade/ciclabili."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e1e5fefb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_musei = gpd.read_file(PATH_MUSEI_CLEAN)\n",
-    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_musei,\n",
-    "                                                       tipo = \"Musei\",\n",
-    "                                                       poi = True,\n",
-    "                                                       artificial = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16874754",
-   "metadata": {},
-   "source": [
-    "### Aggiunta di **Teatri** come **\"poi\"**"
+    "gdf_list = [\n",
+    "    {\"gdf\":  gpd.read_file(PATH_MUSEI_CLEAN),\n",
+    "     \"tipo\": \"Musei\",\n",
+    "     \"gdf\":  gpd.read_file(PATH_CINEMA_CLEAN),\n",
+    "     \"tipo\": \"Cinema\", \n",
+    "     \"gdf\":  gpd.read_file(PATH_TEATRI_CLEAN),\n",
+    "     \"tipo\": \"Teatri\"}\n",
+    "     ]\n",
+    "Graph_functions.auto_analysis_poi(gdf_list, custom_weights={\"default\": 1}, PATH_GEOJSON=\"../Data/Clean/Analisi/Cultura_e_spettacolo_nopesi.geojson\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "03a25cca",
+   "id": "624d06f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\apera\\OneDrive\\Documenti\\progetti\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver GeoJSON does not support open option DRIVER\n",
+      "  return ogr_read(\n"
+     ]
+    }
+   ],
    "source": [
-    "gdf_teatri = gpd.read_file(PATH_TEATRI_CLEAN)\n",
-    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_teatri,\n",
-    "                                                       tipo = \"Teatri\",\n",
-    "                                                       poi = True,\n",
-    "                                                       artificial = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57c35a1f",
-   "metadata": {},
-   "source": [
-    "### Aggiunta di **Cinema** come **\"poi\"**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "4d2edf75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_cinema = gpd.read_file(PATH_CINEMA_CLEAN)\n",
-    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_cinema,\n",
-    "                                                       tipo = \"Cinema\", \n",
-    "                                                       poi = True,\n",
-    "                                                       artificial = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4916467a",
-   "metadata": {},
-   "source": [
-    "## Utilizziamo algoritmo di **Steiner Tree**"
+    "gdf_analisi_cultura_spettacolo_nopesi = gpd.read_file(\"../Data/Clean/Analisi/Cultura_e_spettacolo_nopesi.geojson\", driver= \"GeoJSON\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dd91995a",
+   "id": "6582c90e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "poi_nodes = [n for n, d in G_compose.nodes(data=True) if d.get(\"poi\") == True]\n",
-    "G_cultura_e_spettacollo = nx.MultiDiGraph(steiner_tree(G_compose, terminal_nodes=poi_nodes, weight='weight')).to_undirected()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66f96095",
-   "metadata": {},
-   "source": [
-    "Risultato lo salviamo in Clean di Analisi (per ora anche il pickle in staging) in geojson pronto da visualizzare"
+    "# Eliminiamo connessioni \"artificiali\" usate per connettere i \"poi\" al grafo delle strade\n",
+    "gdf_analisi_cultura_spettacolo_nopesi_mod = gdf_analisi_cultura_spettacolo_nopesi[gdf_analisi_cultura_spettacolo_nopesi[\"artificial\"] != True]\n",
+    "\n",
+    "# Leggi i due POI\n",
+    "gdf_musei = gpd.read_file(PATH_MUSEI_CLEAN)\n",
+    "gdf_teatri = gpd.read_file(PATH_TEATRI_CLEAN)\n",
+    "gdf_cinema = gpd.read_file(PATH_CINEMA_CLEAN)\n",
+    "\n",
+    "# Unisci in un'unica geometria\n",
+    "geometry_poi = gpd.GeoSeries(\n",
+    "    gpd.pd.concat([gdf_cinema.geometry, gdf_teatri.geometry, gdf_musei.geometry], ignore_index=True)\n",
+    ").union_all()\n",
+    "\n",
+    "# Filtra il GDF di partenza\n",
+    "gdf_senza_poi = []\n",
+    "for idx, row in gdf_analisi_cultura_spettacolo_nopesi.iterrows():\n",
+    "    if not geometry_poi.contains(row.geometry):\n",
+    "        gdf_senza_poi.append(row)\n",
+    "\n",
+    "# Crea nuovo GeoDataFrame\n",
+    "gdf_analisi_cultura_spettacolo_nopesi_mod = gpd.GeoDataFrame(gdf_senza_poi, crs=CRS_GRAD)\n",
+    "\n",
+    "# Salviamo per test di visualizzazione su kepler\n",
+    "gdf_analisi_cultura_spettacolo_nopesi_mod.to_file(\"../Data/Clean/Analisi/Cultura_e_spettacolo_nopesi_senza_poi.geojson\", driver=\"GeoJSON\")\n",
+    "\n",
+    "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
+    "gdf_analisi_cultura_spettacolo_nopesi_mod_most_highways = gdf_analisi_cultura_spettacolo_nopesi_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"length\": lambda x: sum(x/1000)\n",
+    "    }).sort_values(by=\"length\", ascending=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5ddf0850",
+   "id": "a0aa245c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             length\n",
+      "highway                            \n",
+      "footway                   21.007829\n",
+      "residential               12.861390\n",
+      "unclassified               8.668459\n",
+      "tertiary                   7.012068\n",
+      "secondary                  4.497550\n",
+      "pedestrian                 1.675621\n",
+      "service                    1.149832\n",
+      "primary                    0.785486\n",
+      "cycleway                   0.577529\n",
+      "footway steps              0.203335\n",
+      "tertiary_link              0.180138\n",
+      "residential pedestrian     0.158752\n",
+      "secondary_link             0.127444\n",
+      "path                       0.124023\n",
+      "residential service        0.085555\n",
+      "steps                      0.079204\n",
+      "footway service            0.078886\n",
+      "unclassified primary       0.067041\n",
+      "unclassified residential   0.066621\n",
+      "unclassified tertiary      0.048681\n",
+      "primary_link               0.026263\n",
+      "Tot: 59.48170546839288\n"
+     ]
+    }
+   ],
    "source": [
-    "with open(\"../Data/Staging/Analisi/Cultura_e_spettacolo_nopesi.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(G_cultura_e_spettacollo, f)\n",
-    "\n",
-    "gdf_steiner = ox.graph_to_gdfs(G_cultura_e_spettacollo, edges=True, nodes=False)\n",
-    "gdf_steiner.to_file(\"../Data/Clean/Analisi/Cultura_e_spettacolo_nopesi.geojson\", driver=\"GeoJSON\")"
+    "# Stampiamo il risultato\n",
+    "print(gdf_analisi_cultura_spettacolo_nopesi_mod_most_highways)\n",
+    "print(f\"Tot: {gdf_analisi_cultura_spettacolo_nopesi_mod_most_highways[\"length\"].sum()}\")"
    ]
   }
  ],
@@ -227,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
