Integrato in Analisi e snellito lo script degli score.

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
@@ -313,6 +313,141 @@
    ],
    "source": [
     "print(gdf_extended_ciclabili_highway.drop(\"cycleway\", axis=0).sum().values[0], \"km\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e151ab70",
+   "metadata": {},
+   "source": [
+    "## Statistiche POI x Municipi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8b3410e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carica dati, aggiungendo una colonna \"tipo\" e tenendo solo questa colonna e geometry\n",
+    "municipi = gpd.read_file(PATH_MUNICIPI_CLEAN)\n",
+    "parchi = gpd.read_file(PATH_PARCHI_CLEAN).assign(tipo=\"parchi\")[[\"tipo\", \"geometry\"]]\n",
+    "fontane = gpd.read_file(PATH_FONTANE_CLEAN).assign(tipo=\"fontane\")[[\"tipo\", \"geometry\"]]\n",
+    "impianti = gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN).assign(tipo=\"impianti_sportivi\")[[\"tipo\", \"geometry\"]]\n",
+    "scuole = gpd.read_file(PATH_SCUOLE_CLEAN).assign(tipo=\"scuole\")[[\"tipo\", \"geometry\"]]\n",
+    "aree_gioco = gpd.read_file(PATH_AREE_GIOCO_CLEAN).assign(tipo=\"aree_gioco\")[[\"tipo\", \"geometry\"]]\n",
+    "biblioteche = gpd.read_file(PATH_BIBLIOTECHE_CLEAN).assign(tipo=\"biblioteche\")[[\"tipo\", \"geometry\"]]\n",
+    "stazioni_bikemi = gpd.read_file(PATH_BIKEMI_CLEAN).assign(tipo=\"stazioni_bikemi\")[[\"tipo\", \"geometry\"]]\n",
+    "case_acqua = gpd.read_file(PATH_CASE_ACQUA_CLEAN).assign(tipo=\"case_acqua\")[[\"tipo\", \"geometry\"]]\n",
+    "cinema = gpd.read_file(PATH_CINEMA_CLEAN).assign(tipo=\"cinema\")[[\"tipo\", \"geometry\"]]\n",
+    "farmacie = gpd.read_file(PATH_FARMACIE_CLEAN).assign(tipo=\"farmacie\")[[\"tipo\", \"geometry\"]]\n",
+    "musei = gpd.read_file(PATH_MUSEI_CLEAN).assign(tipo=\"musei\")[[\"tipo\", \"geometry\"]]\n",
+    "ospedali = gpd.read_file(PATH_OSPEDALI_CLEAN).assign(tipo=\"ospedali\")[[\"tipo\", \"geometry\"]]\n",
+    "teatri = gpd.read_file(PATH_TEATRI_CLEAN).assign(tipo=\"teatri\")[[\"tipo\", \"geometry\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20de51e9",
+   "metadata": {},
+   "source": [
+    "Uniamo le righe dei vari dataframe in uno unico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2287bae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pois = gpd.pd.concat([\n",
+    "    parchi, fontane, impianti, scuole, aree_gioco, biblioteche,\n",
+    "    stazioni_bikemi, case_acqua, cinema, farmacie, musei, ospedali, teatri\n",
+    "], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1bed7ee",
+   "metadata": {},
+   "source": [
+    "Tramite sjoin con predicato \"intersect\": eseguiamo una left-join con il gdf dei municipi in base\n",
+    "all'intersezione delle geometrie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9e68e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pois_con_municipio = gpd.sjoin(\n",
+    "    municipi,\n",
+    "    pois,\n",
+    "    how=\"left\",\n",
+    "    predicate=\"intersects\"\n",
+    "    ).drop([\"index_right\"], axis=1) # eliminiamo l'index_right (conserva l'indice del dataframe del gdf di destra ma non ci serve)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7aa0eb66",
+   "metadata": {},
+   "source": [
+    "Raggruppiamo per Municipio e Tipo (mettiamo anche geometry così ci rimane per il geojson).  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9205ef0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conteggi = pois_con_municipio.groupby(['MUNICIPIO', 'geometry', 'tipo']).size().unstack(fill_value=0).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46df8294",
+   "metadata": {},
+   "source": [
+    "Aggiungiamo una colonna \"point_etichetta\" a cui assegniamo il \"centroid\" del poligono dei vari municipi, in modo  \n",
+    "da utilizzarlo su kepler per aggiungere un layer \"poin\" a cui assegniamo una \"label\" (etichetta) così visualizziamo  \n",
+    "a schermo il numero dell'attributo preso in considerazione (esempio, numero di parchi = 34, così si vede direttamente sulla mappa  \n",
+    "oltre a vedersi solo il colore. Può essere carino)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4eed437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conteggi[\"point_etichetta\"] = conteggi.geometry.apply(lambda x: x.centroid)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45712ff7",
+   "metadata": {},
+   "source": [
+    "Riconvertiamo in geodataframe e salviamo su file geojson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0a160b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conteggi = gpd.GeoDataFrame(conteggi, geometry=\"geometry\", crs=CRS_GRAD)\n",
+    "conteggi.to_file(\"../Data/Clean/Analisi/score_municipi.geojson\", driver=\"GeoJSON\")"
    ]
   }
  ],
